replace List.of after backport