@@ -53,6 +53,7 @@ import org.elasticsearch.search.sort.SortOrder;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
@@ -264,7 +265,7 @@ public final class FlattenedFieldMapper extends DynamicKeyFieldMapper {
         @Override
         public ValueFetcher valueFetcher(MapperService mapperService, SearchLookup searchLookup, String format) {
             // This is an internal field but it can match a field pattern so we return an empty list.
-            return lookup -> List.of();
+            return lookup -> Collections.emptyList();
         }
     }
 
